--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -30,6 +30,9 @@
     "README.md",
     "CHANGELOG.md"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "watch": "tsc --watch",
     "hardhat": "hardhat node",
