--- a/packages/domainobjs/package.json
+++ b/packages/domainobjs/package.json
@@ -9,6 +9,9 @@
     "README.md",
     "CHANGELOG.md"
   ],
+  "publishConfig": {
+    "access": "public"
+  },
   "scripts": {
     "watch": "tsc --watch",
     "build": "tsc -p tsconfig.build.json",
