feat(contracts): add hardhat task for voting in deployed polls
   Implement a new Hardhat task that allows users to vote in MACI polls
   directly from the command line, completing the workflow of deploying,
   voting, merging and proving without requiring a UI.

   Resolves #1997

--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -69,6 +69,7 @@
     "prove": "hardhat prove",
     "submitOnChain": "hardhat submitOnChain",
     "benchmark": "hardhat benchmark",
+    "vote": "hardhat vote",
     "deploy:localhost": "pnpm run deploy",
     "deploy:sepolia": "pnpm run deploy --network sepolia",
     "deploy:optimism-sepolia": "pnpm run deploy --network optimism_sepolia",
@@ -97,6 +98,20 @@
     "deploy-poll:gnosis-chiado": "pnpm run deploy-poll --network gnosis_chiado",
     "deploy-poll:polygon": "pnpm run deploy-poll --network polygon",
     "deploy-poll:polygon-amoy": "pnpm run deploy-poll --network polygon_amoy",
+    "vote:localhost": "pnpm run vote",
+    "vote:sepolia": "pnpm run vote --network sepolia",
+    "vote:optimism-sepolia": "pnpm run vote --network optimism_sepolia",
+    "vote:optimism": "pnpm run vote --network optimism",
+    "vote:scroll": "pnpm run vote --network scroll",
+    "vote:scroll-sepolia": "pnpm run vote --network scroll_sepolia",
+    "vote:arbitrum": "pnpm run vote --network arbitrum",
+    "vote:arbitrum-sepolia": "pnpm run vote --network arbitrum_sepolia",
+    "vote:base": "pnpm run vote --network base",
+    "vote:base-sepolia": "pnpm run vote --network base_sepolia",
+    "vote:gnosis": "pnpm run vote --network gnosis",
+    "vote:gnosis-chiado": "pnpm run vote --network gnosis_chiado",
+    "vote:polygon": "pnpm run vote --network polygon",
+    "vote:polygon-amoy": "pnpm run vote --network polygon_amoy",
     "merge:localhost": "pnpm run merge",
     "merge:sepolia": "pnpm run merge --network sepolia",
     "merge:optimism-sepolia": "pnpm run merge --network optimism_sepolia",
