feat: deployer service with local signer

--- a/apps/coordinator/.env.example
+++ b/apps/coordinator/.env.example
@@ -69,3 +69,6 @@ TEST_PRIVATE_KEY=""
 # Storage for metadata
 # Create a Blob database and get token here: https://vercel.com/dashboard/stores?type=blob
 BLOB_READ_WRITE_TOKEN=
+
+# A private key for deploying contracts (in case of not using AA flow)
+PRIVATE_KEY=""
