--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        command: ["test:unit", "test:integration", "test:e2e"]
+        command: ["test:unit", "test:integration", "test:e2e", "test:hardhat"]
 
     runs-on: ubuntu-24.04
 
@@ -47,6 +47,7 @@ jobs:
 
       - name: Run hardhat fork
         run: |
+          cp ./deploy-config-example.json ./deploy-config.json
           cd packages/contracts
           pnpm run hardhat &
 
@@ -61,11 +62,6 @@ jobs:
           wget -qO ${{ github.workspace }}/circom https://github.com/iden3/circom/releases/download/v2.1.6/circom-linux-amd64
           chmod +x ${{ github.workspace }}/circom
           sudo mv ${{ github.workspace }}/circom /bin/circom
-
-      - name: Create zkeys folder
-        run: |
-          cd packages/cli
-          mkdir -p zkeys
 
       - name: Compile Circuits And Generate zkeys
         run: |
