--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "test:integration": "lerna run test:integration --scope \"@maci-protocol/testing\"",
     "test:e2e": "lerna run test:e2e --scope \"@maci-protocol/testing\"",
     "test:unit": "lerna run test:unit --scope \"@maci-protocol/testing\"",
+    "test:hardhat": "lerna run test:hardhat --scope \"@maci-protocol/contracts\"",
     "test": "lerna run test --ignore \"@maci-protocol/testing\"",
     "types": "lerna run types",
     "docs": "lerna run docs",
