--- a/.github/workflows/reusable-e2e.yml
+++ b/.github/workflows/reusable-e2e.yml
@@ -96,7 +96,7 @@ jobs:
           pnpm setup:zkeys -- --outPath ../testing/zkeys
 
       - name: Download zkeys
-        if: ${{ env.CHANGED == 'false' && steps.cache_zkeys.outputs.cache-hit != 'true' }}
+        if: ${{ env.CHANGED == 'false' }}
         run: |
           pnpm download-zkeys:test
 
