feat(circuits): add partial support for full spent voting mode
- [x] Add message validator for full spent voting mode
- [x] Add state leaf and ballot transformers for full spent voting mode
- [x] Rename `PCommand` to `VoteCommand`
- [x] Minor naming refactoring

--- a/packages/circuits/package.json
+++ b/packages/circuits/package.json
@@ -31,8 +31,10 @@
     "test:poseidonHasher": "pnpm run mocha-test ts/__tests__/PoseidonHasher.test.ts",
     "test:messageHasher": "pnpm run mocha-test ts/__tests__/MessageHasher.test.ts",
     "test:slAndBallotTransformer": "pnpm run mocha-test ts/__tests__/StateLeafAndBallotTransformer.test.ts",
+    "test:slAndBallotTransformerFull": "pnpm run mocha-test ts/__tests__/StateLeafAndBallotTransformerFull.test.ts",
     "test:messageToCommand": "pnpm run mocha-test ts/__tests__/MessageToCommand.test.ts",
     "test:messageValidator": "pnpm run mocha-test ts/__tests__/MessageValidator.test.ts",
+    "test:messageValidatorFull": "pnpm run mocha-test ts/__tests__/MessageValidatorFull.test.ts",
     "test:verifySignature": "pnpm run mocha-test ts/__tests__/VerifySignature.test.ts",
     "test:privateToPublicKey": "pnpm run mocha-test ts/__tests__/PrivateToPublicKey.test.ts",
     "test:calculateTotal": "pnpm run mocha-test ts/__tests__/CalculateTotal.test.ts",
