--- a/packages/contracts/deploy-config-example.json
+++ b/packages/contracts/deploy-config-example.json
@@ -57,7 +57,7 @@
     },
     "VerifyingKeysRegistry": {
       "stateTreeDepth": 10,
-      "intStateTreeDepth": 1,
+      "tallyProcessingStateTreeDepth": 1,
       "voteOptionTreeDepth": 2,
       "messageBatchSize": 20,
       "zkeys": {
@@ -75,9 +75,9 @@
         },
         "full": {
           "processMessagesZkey": "../testing/zkeys/MessageProcessorFull_10-20-2_test/MessageProcessorFull_10-20-2_test.0.zkey",
-          "tallyVotesZkey": "../testing/zkeys/TallyVotesFull_10-1-2_test/TallyVotesFull_10-1-2_test.0.zkey",
+          "tallyVotesZkey": "../testing/zkeys/TallyVotesNonQv_10-1-2_test/TallyVotesNonQv_10-1-2_test.0.zkey",
           "processWasm": "../testing/zkeys/MessageProcessorFull_10-20-2_test/MessageProcessorFull_10-20-2_test_js/MessageProcessorFull_10-20-2_test.wasm",
-          "tallyWasm": "../testing/zkeys/TallyVotesFull_10-1-2_test/TallyVotesFull_10-1-2_test_js/TallyVotesFull_10-1-2_test.wasm"
+          "tallyWasm": "../testing/zkeys/TallyVotesNonQv_10-1-2_test/TallyVotesNonQv_10-1-2_test_js/TallyVotesNonQv_10-1-2_test.wasm"
         },
         "pollJoiningZkey": {
           "zkey": "../testing/zkeys/PollJoining_10_test/PollJoining_10_test.0.zkey",
@@ -158,7 +158,7 @@
     },
     "VerifyingKeysRegistry": {
       "stateTreeDepth": 10,
-      "intStateTreeDepth": 1,
+      "tallyProcessingStateTreeDepth": 1,
       "voteOptionTreeDepth": 2,
       "messageBatchSize": 20,
       "zkeys": {
@@ -176,9 +176,9 @@
         },
         "full": {
           "processMessagesZkey": "../testing/zkeys/MessageProcessorFull_10-20-2_test/MessageProcessorFull_10-20-2_test.0.zkey",
-          "tallyVotesZkey": "../testing/zkeys/TallyVotesFull_10-1-2_test/TallyVotesFull_10-1-2_test.0.zkey",
+          "tallyVotesZkey": "../testing/zkeys/TallyVotesNonQv_10-1-2_test/TallyVotesNonQv_10-1-2_test.0.zkey",
           "processWasm": "../testing/zkeys/MessageProcessorFull_10-20-2_test/MessageProcessorFull_10-20-2_test_js/MessageProcessorFull_10-20-2_test.wasm",
-          "tallyWasm": "../testing/zkeys/TallyVotesFull_10-1-2_test/TallyVotesFull_10-1-2_test_js/TallyVotesFull_10-1-2_test.wasm"
+          "tallyWasm": "../testing/zkeys/TallyVotesNonQv_10-1-2_test/TallyVotesNonQv_10-1-2_test_js/TallyVotesNonQv_10-1-2_test.wasm"
         },
         "pollJoiningZkey": {
           "zkey": "../testing/zkeys/PollJoining_10_test/PollJoining_10_test.0.zkey",
@@ -260,7 +260,7 @@
     },
     "VerifyingKeysRegistry": {
       "stateTreeDepth": 6,
-      "intStateTreeDepth": 2,
+      "tallyProcessingStateTreeDepth": 2,
       "voteOptionTreeDepth": 3,
       "messageBatchSize": 20,
       "zkeys": {
@@ -278,9 +278,9 @@
         },
         "full": {
           "processMessagesZkey": "../testing/zkeys/MessageProcessorFull_10-20-2_test/MessageProcessorFull_10-20-2_test.0.zkey",
-          "tallyVotesZkey": "../testing/zkeys/TallyVotesFull_10-1-2_test/TallyVotesFull_10-1-2_test.0.zkey",
+          "tallyVotesZkey": "../testing/zkeys/TallyVotesNonQv_10-1-2_test/TallyVotesNonQv_10-1-2_test.0.zkey",
           "processWasm": "../testing/zkeys/MessageProcessorFull_10-20-2_test/MessageProcessorFull_10-20-2_test_js/MessageProcessorFull_10-20-2_test.wasm",
-          "tallyWasm": "../testing/zkeys/TallyVotesFull_10-1-2_test/TallyVotesFull_10-1-2_test_js/TallyVotesFull_10-1-2_test.wasm"
+          "tallyWasm": "../testing/zkeys/TallyVotesNonQv_10-1-2_test/TallyVotesNonQv_10-1-2_test_js/TallyVotesNonQv_10-1-2_test.wasm"
         },
         "pollJoiningZkey": {
           "zkey": "../testing/zkeys/PollJoining_10_test/PollJoining_10_test.0.zkey",
@@ -362,7 +362,7 @@
     },
     "VerifyingKeysRegistry": {
       "stateTreeDepth": 10,
-      "intStateTreeDepth": 1,
+      "tallyProcessingStateTreeDepth": 1,
       "voteOptionTreeDepth": 2,
       "messageBatchSize": 20,
       "zkeys": {
@@ -380,9 +380,9 @@
         },
         "full": {
           "processMessagesZkey": "../testing/zkeys/MessageProcessorFull_10-20-2_test/MessageProcessorFull_10-20-2_test.0.zkey",
-          "tallyVotesZkey": "../testing/zkeys/TallyVotesFull_10-1-2_test/TallyVotesFull_10-1-2_test.0.zkey",
+          "tallyVotesZkey": "../testing/zkeys/TallyVotesNonQv_10-1-2_test/TallyVotesNonQv_10-1-2_test.0.zkey",
           "processWasm": "../testing/zkeys/MessageProcessorFull_10-20-2_test/MessageProcessorFull_10-20-2_test_js/MessageProcessorFull_10-20-2_test.wasm",
-          "tallyWasm": "../testing/zkeys/TallyVotesFull_10-1-2_test/TallyVotesFull_10-1-2_test_js/TallyVotesFull_10-1-2_test.wasm"
+          "tallyWasm": "../testing/zkeys/TallyVotesNonQv_10-1-2_test/TallyVotesNonQv_10-1-2_test_js/TallyVotesNonQv_10-1-2_test.wasm"
         },
         "pollJoiningZkey": {
           "zkey": "../testing/zkeys/PollJoining_10_test/PollJoining_10_test.0.zkey",
@@ -464,7 +464,7 @@
     },
     "VerifyingKeysRegistry": {
       "stateTreeDepth": 10,
-      "intStateTreeDepth": 1,
+      "tallyProcessingStateTreeDepth": 1,
       "voteOptionTreeDepth": 2,
       "messageBatchSize": 20,
       "zkeys": {
@@ -482,9 +482,9 @@
         },
         "full": {
           "processMessagesZkey": "../testing/zkeys/MessageProcessorFull_10-20-2_test/MessageProcessorFull_10-20-2_test.0.zkey",
-          "tallyVotesZkey": "../testing/zkeys/TallyVotesFull_10-1-2_test/TallyVotesFull_10-1-2_test.0.zkey",
+          "tallyVotesZkey": "../testing/zkeys/TallyVotesNonQv_10-1-2_test/TallyVotesNonQv_10-1-2_test.0.zkey",
           "processWasm": "../testing/zkeys/MessageProcessorFull_10-20-2_test/MessageProcessorFull_10-20-2_test_js/MessageProcessorFull_10-20-2_test.wasm",
-          "tallyWasm": "../testing/zkeys/TallyVotesFull_10-1-2_test/TallyVotesFull_10-1-2_test_js/TallyVotesFull_10-1-2_test.wasm"
+          "tallyWasm": "../testing/zkeys/TallyVotesNonQv_10-1-2_test/TallyVotesNonQv_10-1-2_test_js/TallyVotesNonQv_10-1-2_test.wasm"
         },
         "pollJoiningZkey": {
           "zkey": "../testing/zkeys/PollJoining_10_test/PollJoining_10_test.0.zkey",
@@ -566,7 +566,7 @@
     },
     "VerifyingKeysRegistry": {
       "stateTreeDepth": 10,
-      "intStateTreeDepth": 1,
+      "tallyProcessingStateTreeDepth": 1,
       "voteOptionTreeDepth": 2,
       "messageBatchSize": 20,
       "zkeys": {
@@ -584,9 +584,9 @@
         },
         "full": {
           "processMessagesZkey": "../testing/zkeys/MessageProcessorFull_10-20-2_test/MessageProcessorFull_10-20-2_test.0.zkey",
-          "tallyVotesZkey": "../testing/zkeys/TallyVotesFull_10-1-2_test/TallyVotesFull_10-1-2_test.0.zkey",
+          "tallyVotesZkey": "../testing/zkeys/TallyVotesNonQv_10-1-2_test/TallyVotesNonQv_10-1-2_test.0.zkey",
           "processWasm": "../testing/zkeys/MessageProcessorFull_10-20-2_test/MessageProcessorFull_10-20-2_test_js/MessageProcessorFull_10-20-2_test.wasm",
-          "tallyWasm": "../testing/zkeys/TallyVotesFull_10-1-2_test/TallyVotesFull_10-1-2_test_js/TallyVotesFull_10-1-2_test.wasm"
+          "tallyWasm": "../testing/zkeys/TallyVotesNonQv_10-1-2_test/TallyVotesNonQv_10-1-2_test_js/TallyVotesNonQv_10-1-2_test.wasm"
         },
         "pollJoiningZkey": {
           "zkey": "../testing/zkeys/PollJoining_10_test/PollJoining_10_test.0.zkey",
@@ -673,7 +673,7 @@
     },
     "VerifyingKeysRegistry": {
       "stateTreeDepth": 10,
-      "intStateTreeDepth": 1,
+      "tallyProcessingStateTreeDepth": 1,
       "voteOptionTreeDepth": 2,
       "messageBatchSize": 20,
       "zkeys": {
@@ -691,9 +691,9 @@
         },
         "full": {
           "processMessagesZkey": "../testing/zkeys/MessageProcessorFull_10-20-2_test/MessageProcessorFull_10-20-2_test.0.zkey",
-          "tallyVotesZkey": "../testing/zkeys/TallyVotesFull_10-1-2_test/TallyVotesFull_10-1-2_test.0.zkey",
+          "tallyVotesZkey": "../testing/zkeys/TallyVotesNonQv_10-1-2_test/TallyVotesNonQv_10-1-2_test.0.zkey",
           "processWasm": "../testing/zkeys/MessageProcessorFull_10-20-2_test/MessageProcessorFull_10-20-2_test_js/MessageProcessorFull_10-20-2_test.wasm",
-          "tallyWasm": "../testing/zkeys/TallyVotesFull_10-1-2_test/TallyVotesFull_10-1-2_test_js/TallyVotesFull_10-1-2_test.wasm"
+          "tallyWasm": "../testing/zkeys/TallyVotesNonQv_10-1-2_test/TallyVotesNonQv_10-1-2_test_js/TallyVotesNonQv_10-1-2_test.wasm"
         },
         "pollJoiningZkey": {
           "zkey": "../testing/zkeys/PollJoining_10_test/PollJoining_10_test.0.zkey",
@@ -780,7 +780,7 @@
     },
     "VerifyingKeysRegistry": {
       "stateTreeDepth": 10,
-      "intStateTreeDepth": 1,
+      "tallyProcessingStateTreeDepth": 1,
       "voteOptionTreeDepth": 2,
       "messageBatchSize": 20,
       "zkeys": {
@@ -798,9 +798,9 @@
         },
         "full": {
           "processMessagesZkey": "../testing/zkeys/MessageProcessorFull_10-20-2_test/MessageProcessorFull_10-20-2_test.0.zkey",
-          "tallyVotesZkey": "../testing/zkeys/TallyVotesFull_10-1-2_test/TallyVotesFull_10-1-2_test.0.zkey",
+          "tallyVotesZkey": "../testing/zkeys/TallyVotesNonQv_10-1-2_test/TallyVotesNonQv_10-1-2_test.0.zkey",
           "processWasm": "../testing/zkeys/MessageProcessorFull_10-20-2_test/MessageProcessorFull_10-20-2_test_js/MessageProcessorFull_10-20-2_test.wasm",
-          "tallyWasm": "../testing/zkeys/TallyVotesFull_10-1-2_test/TallyVotesFull_10-1-2_test_js/TallyVotesFull_10-1-2_test.wasm"
+          "tallyWasm": "../testing/zkeys/TallyVotesNonQv_10-1-2_test/TallyVotesNonQv_10-1-2_test_js/TallyVotesNonQv_10-1-2_test.wasm"
         },
         "pollJoiningZkey": {
           "zkey": "../testing/zkeys/PollJoining_10_test/PollJoining_10_test.0.zkey",
@@ -887,7 +887,7 @@
     },
     "VerifyingKeysRegistry": {
       "stateTreeDepth": 10,
-      "intStateTreeDepth": 1,
+      "tallyProcessingStateTreeDepth": 1,
       "voteOptionTreeDepth": 2,
       "messageBatchSize": 20,
       "zkeys": {
@@ -905,9 +905,9 @@
         },
         "full": {
           "processMessagesZkey": "../testing/zkeys/MessageProcessorFull_10-20-2_test/MessageProcessorFull_10-20-2_test.0.zkey",
-          "tallyVotesZkey": "../testing/zkeys/TallyVotesFull_10-1-2_test/TallyVotesFull_10-1-2_test.0.zkey",
+          "tallyVotesZkey": "../testing/zkeys/TallyVotesNonQv_10-1-2_test/TallyVotesNonQv_10-1-2_test.0.zkey",
           "processWasm": "../testing/zkeys/MessageProcessorFull_10-20-2_test/MessageProcessorFull_10-20-2_test_js/MessageProcessorFull_10-20-2_test.wasm",
-          "tallyWasm": "../testing/zkeys/TallyVotesFull_10-1-2_test/TallyVotesFull_10-1-2_test_js/TallyVotesFull_10-1-2_test.wasm"
+          "tallyWasm": "../testing/zkeys/TallyVotesNonQv_10-1-2_test/TallyVotesNonQv_10-1-2_test_js/TallyVotesNonQv_10-1-2_test.wasm"
         },
         "pollJoiningZkey": {
           "zkey": "../testing/zkeys/PollJoining_10_test/PollJoining_10_test.0.zkey",
@@ -994,7 +994,7 @@
     },
     "VerifyingKeysRegistry": {
       "stateTreeDepth": 10,
-      "intStateTreeDepth": 1,
+      "tallyProcessingStateTreeDepth": 1,
       "voteOptionTreeDepth": 2,
       "messageBatchSize": 20,
       "zkeys": {
@@ -1012,9 +1012,9 @@
         },
         "full": {
           "processMessagesZkey": "../testing/zkeys/MessageProcessorFull_10-20-2_test/MessageProcessorFull_10-20-2_test.0.zkey",
-          "tallyVotesZkey": "../testing/zkeys/TallyVotesFull_10-1-2_test/TallyVotesFull_10-1-2_test.0.zkey",
+          "tallyVotesZkey": "../testing/zkeys/TallyVotesNonQv_10-1-2_test/TallyVotesNonQv_10-1-2_test.0.zkey",
           "processWasm": "../testing/zkeys/MessageProcessorFull_10-20-2_test/MessageProcessorFull_10-20-2_test_js/MessageProcessorFull_10-20-2_test.wasm",
-          "tallyWasm": "../testing/zkeys/TallyVotesFull_10-1-2_test/TallyVotesFull_10-1-2_test_js/TallyVotesFull_10-1-2_test.wasm"
+          "tallyWasm": "../testing/zkeys/TallyVotesNonQv_10-1-2_test/TallyVotesNonQv_10-1-2_test_js/TallyVotesNonQv_10-1-2_test.wasm"
         },
         "pollJoiningZkey": {
           "zkey": "../testing/zkeys/PollJoining_10_test/PollJoining_10_test.0.zkey",
@@ -1101,7 +1101,7 @@
     },
     "VerifyingKeysRegistry": {
       "stateTreeDepth": 10,
-      "intStateTreeDepth": 1,
+      "tallyProcessingStateTreeDepth": 1,
       "voteOptionTreeDepth": 2,
       "messageBatchSize": 20,
       "zkeys": {
@@ -1119,9 +1119,9 @@
         },
         "full": {
           "processMessagesZkey": "../testing/zkeys/MessageProcessorFull_10-20-2_test/MessageProcessorFull_10-20-2_test.0.zkey",
-          "tallyVotesZkey": "../testing/zkeys/TallyVotesFull_10-1-2_test/TallyVotesFull_10-1-2_test.0.zkey",
+          "tallyVotesZkey": "../testing/zkeys/TallyVotesNonQv_10-1-2_test/TallyVotesNonQv_10-1-2_test.0.zkey",
           "processWasm": "../testing/zkeys/MessageProcessorFull_10-20-2_test/MessageProcessorFull_10-20-2_test_js/MessageProcessorFull_10-20-2_test.wasm",
-          "tallyWasm": "../testing/zkeys/TallyVotesFull_10-1-2_test/TallyVotesFull_10-1-2_test_js/TallyVotesFull_10-1-2_test.wasm"
+          "tallyWasm": "../testing/zkeys/TallyVotesNonQv_10-1-2_test/TallyVotesNonQv_10-1-2_test_js/TallyVotesNonQv_10-1-2_test.wasm"
         },
         "pollJoiningZkey": {
           "zkey": "../testing/zkeys/PollJoining_10_test/PollJoining_10_test.0.zkey",
