fix: nightly workflows and coordinator e2e

--- a/apps/coordinator/package.json
+++ b/apps/coordinator/package.json
@@ -22,10 +22,9 @@
     "run:node": "node --import 'data:text/javascript,import { register } from \"node:module\"; import { pathToFileURL } from \"node:url\"; register(\"ts-node/esm\", pathToFileURL(\"./\"));'",
     "start": "pnpm run run:node ./ts/main.ts",
     "start:prod": "pnpm run run:node build/ts/main.js",
-    "test": "jest --testPathIgnorePatterns=e2e.aa.test.ts --forceExit",
+    "test": "jest --testPathIgnorePatterns=e2e.deploy.test.ts --testPathIgnorePatterns=e2e.test.ts --forceExit",
     "test:coverage": "jest --coverage --forceExit",
-    "test:e2e": "jest ./tests/e2e.deploy.test.ts --forceExit",
-    "test:aa": "jest ./tests/e2e.aa.test.ts --forceExit",
+    "test:e2e": "jest ./tests/*.test.ts --forceExit",
     "types": "tsc -p tsconfig.json --noEmit",
     "generate-maci-keypair": "pnpm run run:node ./scripts/generateMaciKeypair.ts",
     "generate-keypair": "pnpm run run:node ./scripts/generateKeypair.ts",
