feat: add support for mainnet deployment

--- a/packages/contracts/.env.example
+++ b/packages/contracts/.env.example
@@ -18,6 +18,8 @@ OP_SEPOLIA_RPC_URL=
 SCROLL_RPC_URL=
 # RPC url to talk to scroll sepolia
 SCROLL_SEPOLIA_RPC_URL=
+# RPC url to talk to mainnet
+MAINNET_RPC_URL=
 # Forking url for testing
 FORKING_URL=
 # Gas price to use for transactions
