--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -75,6 +75,7 @@
     "submitOnChain": "hardhat submitOnChain",
     "benchmark": "hardhat benchmark",
     "deploy:localhost": "pnpm run deploy",
+    "deploy:mainnet": "pnpm run deploy --network mainnet",
     "deploy:sepolia": "pnpm run deploy --network sepolia",
     "deploy:optimism-sepolia": "pnpm run deploy --network optimism_sepolia",
     "deploy:optimism": "pnpm run deploy --network optimism",
@@ -89,6 +90,7 @@
     "deploy:polygon": "pnpm run deploy --network polygon",
     "deploy:polygon-amoy": "pnpm run deploy --network polygon_amoy",
     "deploy-poll:localhost": "pnpm run deploy-poll",
+    "deploy-poll:mainnet": "pnpm run deploy-poll --network mainnet",
     "deploy-poll:sepolia": "pnpm run deploy-poll --network sepolia",
     "deploy-poll:optimism-sepolia": "pnpm run deploy-poll --network optimism_sepolia",
     "deploy-poll:optimism": "pnpm run deploy-poll --network optimism",
@@ -103,6 +105,7 @@
     "deploy-poll:polygon": "pnpm run deploy-poll --network polygon",
     "deploy-poll:polygon-amoy": "pnpm run deploy-poll --network polygon_amoy",
     "merge:localhost": "pnpm run merge",
+    "merge:mainnet": "pnpm run merge --network mainnet",
     "merge:sepolia": "pnpm run merge --network sepolia",
     "merge:optimism-sepolia": "pnpm run merge --network optimism_sepolia",
     "merge:optimism": "pnpm run merge --network optimism",
@@ -117,6 +120,7 @@
     "merge:polygon": "pnpm run merge --network polygon",
     "merge:polygon-amoy": "pnpm run merge --network polygon_amoy",
     "prove:localhost": "pnpm run prove",
+    "prove:mainnet": "pnpm run prove --network mainnet",
     "prove:sepolia": "pnpm run prove --network sepolia",
     "prove:optimism-sepolia": "pnpm run prove --network optimism_sepolia",
     "prove:optimism": "pnpm run prove --network optimism",
@@ -131,6 +135,7 @@
     "prove:polygon": "pnpm run prove --network polygon",
     "prove:polygon-amoy": "pnpm run prove --network polygon_amoy",
     "submitOnChain:localhost": "pnpm run submitOnChain --network localhost",
+    "submitOnChain:mainnet": "pnpm run submitOnChain --network mainnet",
     "submitOnChain:sepolia": "pnpm run submitOnChain --network sepolia",
     "submitOnChain:optimism-sepolia": "pnpm run submitOnChain --network optimism_sepolia",
     "submitOnChain:optimism": "pnpm run submitOnChain --network optimism",
@@ -145,6 +150,7 @@
     "submitOnChain:polygon": "pnpm run submitOnChain --network polygon",
     "submitOnChain:polygon-amoy": "pnpm run submitOnChain --network polygon_amoy",
     "verify:sepolia": "pnpm run verify --network sepolia",
+    "verify:mainnet": "pnpm run verify --network mainnet",
     "verify:optimism-sepolia": "pnpm run verify --network optimism_sepolia",
     "verify:optimism": "pnpm run verify --network optimism",
     "verify:scroll": "pnpm run verify --network scroll",
@@ -157,6 +163,7 @@
     "verify:polygon": "pnpm run verify --network polygon",
     "verify:polygon-amoy": "pnpm run verify --network polygon_amoy",
     "benchmark:sepolia": "hardhat benchmark --network sepolia",
+    "benchmark:mainnet": "hardhat benchmark --network mainnet",
     "benchmark:optimism-sepolia": "hardhat benchmark --network optimism_sepolia",
     "benchmark:optimism": "pnpm run benchmark --network optimism",
     "benchmark:scroll": "pnpm run benchmark --network scroll",
