refactor: circuit structure
- [x] Rename circuits for message processing
- [x] Rename circuits for tally
- [x] Move commitment verifiers to utils
- [x] Compatibility fixes

--- a/packages/circuits/package.json
+++ b/packages/circuits/package.json
@@ -38,8 +38,8 @@
     "test:verifySignature": "pnpm run mocha-test ts/__tests__/VerifySignature.test.ts",
     "test:privateToPublicKey": "pnpm run mocha-test ts/__tests__/PrivateToPublicKey.test.ts",
     "test:calculateTotal": "pnpm run mocha-test ts/__tests__/CalculateTotal.test.ts",
-    "test:processMessages": "pnpm run mocha-test ts/__tests__/ProcessMessages.test.ts",
-    "test:tallyVotes": "pnpm run mocha-test ts/__tests__/TallyVotes.test.ts",
+    "test:messageProcessor": "pnpm run mocha-test ts/__tests__/MessageProcessor.test.ts",
+    "test:voteTally": "pnpm run mocha-test ts/__tests__/VoteTally.test.ts",
     "test:ceremonyParams": "pnpm run mocha-test ts/__tests__/CeremonyParams.test.ts",
     "test:incrementalQuinaryTree": "pnpm run mocha-test ts/__tests__/IncrementalQuinaryTree.test.ts",
     "test:pollJoining": "pnpm run mocha-test ts/__tests__/PollJoining.test.ts",
