feat(coordinator): changes to use it with Aragon UI
refactor: print x & y separately

refactor(coordinator): rename to publicKeyOnChain

feat(coordinator): read zkeys qv non_qv and full

feat(coordinator): dockerize service

feat(coordinator): address PR comments (test WIP)

fix(coordinator): running tests + coordinator rpc url

fix(docker): find out why prover doesnt exist

fix(coordinator): remove github action until docker works

feat(coordinator): use it with Aragon UI

--- a/apps/coordinator/.env.example
+++ b/apps/coordinator/.env.example
@@ -7,6 +7,8 @@ LIMIT=10
 COORDINATOR_PUBLIC_KEY_PATH="./public.key"
 COORDINATOR_PRIVATE_KEY_PATH="./private.key"
 
+COORDINATOR_MACI_PRIVATE_KEY=""
+
 # Make sure you have zkeys folder
 # https://maci.pse.dev/docs/trusted-setup
 COORDINATOR_TALLY_ZKEY_NAME=VoteTallyQv_10-1-2_test
@@ -59,9 +61,6 @@ ZERODEV_BUNDLER_RPC_OP_SEPOLIA=""
 
 # RPC URL for Zerodev bundler on OP mainnet (RPC v3)
 ZERODEV_BUNDLER_RPC_OP=""
-
-# RPC API KEY for Alchemy
-RPC_API_KEY=""
 
 # A private key for e2e tests (in format 0x${private_key})
 TEST_PRIVATE_KEY=""
