feat: add zksync, linea deployment support
- [x] Add new scripts for the deployment
- [x] Add new scripts for the benchmark
- [x] Customize gas report values
- [x] Replace stuck transactions for benchmark

--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "types": "lerna run types",
     "docs": "lerna run docs",
     "prepare": "is-ci || husky",
-    "generateMaciKeyPair": "node packages/cli/build/ts/index.js generateMaciKeyPair"
+    "generate-maci-keypair": "node packages/cli/build/ts/index.js generateMaciKeyPair"
   },
   "author": "PSE",
   "devDependencies": {
