--- a/packages/contracts/.env.example
+++ b/packages/contracts/.env.example
@@ -10,6 +10,12 @@ SCROLL_ETHERSCAN_API_KEY=
 BASE_ETHERSCAN_API_KEY=
 # api key for arbitrum etherscan
 ARB_ETHERSCAN_API_KEY=
+# api key for polygon etherscan
+POLYGON_ETHERSCAN_API_KEY=
+# api key for linea etherscan
+LINEA_ETHERSCAN_API_KEY=
+# api key for zksync etherscan
+ZK_SYNC_ETHERSCAN_API_KEY=
 # RPC url to talk to optimism mainnet
 SEPOLIA_RPC_URL=
 # RPC url to talk to optimism sepolia
@@ -20,6 +26,14 @@ SCROLL_RPC_URL=
 SCROLL_SEPOLIA_RPC_URL=
 # RPC url to talk to mainnet
 MAINNET_RPC_URL=
+# RPC url to talk to linea
+LINEA_RPC_URL=
+# RPC url to talk to linea sepolia (testnet)
+LINEA_SEPOLIA_RPC_URL=
+# RPC url to talk to zksync era
+ZK_SYNC_ERA_RPC_URL=
+# RPC url to talk to zksync sepolia (testnet)
+ZK_SYNC_SEPOLIA_RPC_URL=
 # Forking url for testing
 FORKING_URL=
 # Gas price to use for transactions
@@ -30,3 +44,9 @@ FORKING_BLOCK_NUM=
 HARDHAT_LOGGING=
 # IPFS Gateway URL
 IPFS_GATEWAY_URL=
+# Benchmark max batch size
+BENCHMARK_MAX_BATCH_SIZE=
+# CoinMarkerCap api key for prices (gas reporter)
+COINMARKETCAP_API_KEY=
+# Gas price for gas reporter
+GAS_REPORTER_PRICE=
