--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -89,6 +89,10 @@
     "deploy:gnosis-chiado": "pnpm run deploy --network gnosis_chiado",
     "deploy:polygon": "pnpm run deploy --network polygon",
     "deploy:polygon-amoy": "pnpm run deploy --network polygon_amoy",
+    "deploy:linea": "pnpm run deploy --network linea",
+    "deploy:linea-sepolia": "pnpm run deploy --network linea_sepolia",
+    "deploy:zksync-era": "pnpm run deploy --network zksync_era",
+    "deploy:zksync-sepolia": "pnpm run deploy --network zksync_sepolia",
     "deploy-poll:localhost": "pnpm run deploy-poll",
     "deploy-poll:mainnet": "pnpm run deploy-poll --network mainnet",
     "deploy-poll:sepolia": "pnpm run deploy-poll --network sepolia",
@@ -104,6 +108,10 @@
     "deploy-poll:gnosis-chiado": "pnpm run deploy-poll --network gnosis_chiado",
     "deploy-poll:polygon": "pnpm run deploy-poll --network polygon",
     "deploy-poll:polygon-amoy": "pnpm run deploy-poll --network polygon_amoy",
+    "deploy-poll:linea": "pnpm run deploy-poll --network linea",
+    "deploy-poll:linea-sepolia": "pnpm run deploy-poll --network linea_sepolia",
+    "deploy-poll:zksync-era": "pnpm run deploy-poll --network zksync_era",
+    "deploy-poll:zksync-sepolia": "pnpm run deploy-poll --network zksync_sepolia",
     "merge:localhost": "pnpm run merge",
     "merge:mainnet": "pnpm run merge --network mainnet",
     "merge:sepolia": "pnpm run merge --network sepolia",
@@ -119,6 +127,10 @@
     "merge:gnosis-chiado": "pnpm run merge --network gnosis_chiado",
     "merge:polygon": "pnpm run merge --network polygon",
     "merge:polygon-amoy": "pnpm run merge --network polygon_amoy",
+    "merge:linea": "pnpm run merge --network linea",
+    "merge:linea-sepolia": "pnpm run merge --network linea_sepolia",
+    "merge:zksync-era": "pnpm run merge --network zksync_era",
+    "merge:zksync-sepolia": "pnpm run merge --network zksync_sepolia",
     "prove:localhost": "pnpm run prove",
     "prove:mainnet": "pnpm run prove --network mainnet",
     "prove:sepolia": "pnpm run prove --network sepolia",
@@ -134,6 +146,10 @@
     "prove:gnosis-chiado": "pnpm run prove --network gnosis_chiado",
     "prove:polygon": "pnpm run prove --network polygon",
     "prove:polygon-amoy": "pnpm run prove --network polygon_amoy",
+    "prove:linea": "pnpm run prove --network linea",
+    "prove:linea-sepolia": "pnpm run prove --network linea_sepolia",
+    "prove:zksync-era": "pnpm run prove --network zksync_era",
+    "prove:zksync-sepolia": "pnpm run prove --network zksync_sepolia",
     "submitOnChain:localhost": "pnpm run submitOnChain --network localhost",
     "submitOnChain:mainnet": "pnpm run submitOnChain --network mainnet",
     "submitOnChain:sepolia": "pnpm run submitOnChain --network sepolia",
@@ -149,6 +165,10 @@
     "submitOnChain:gnosis-chiado": "pnpm run submitOnChain --network gnosis_chiado",
     "submitOnChain:polygon": "pnpm run submitOnChain --network polygon",
     "submitOnChain:polygon-amoy": "pnpm run submitOnChain --network polygon_amoy",
+    "submitOnChain:linea": "pnpm run submitOnChain --network linea",
+    "submitOnChain:linea-sepolia": "pnpm run submitOnChain --network linea_sepolia",
+    "submitOnChain:zksync-era": "pnpm run submitOnChain --network zksync_era",
+    "submitOnChain:zksync-sepolia": "pnpm run submitOnChain --network zksync_sepolia",
     "verify:sepolia": "pnpm run verify --network sepolia",
     "verify:mainnet": "pnpm run verify --network mainnet",
     "verify:optimism-sepolia": "pnpm run verify --network optimism_sepolia",
@@ -162,6 +182,10 @@
     "verify:gnosis-chiado": "pnpm run verify --network gnosis_chiado",
     "verify:polygon": "pnpm run verify --network polygon",
     "verify:polygon-amoy": "pnpm run verify --network polygon_amoy",
+    "verify:linea": "pnpm run verify --network linea",
+    "verify:linea-sepolia": "pnpm run verify --network linea_sepolia",
+    "verify:zksync-era": "pnpm run verify --network zksync_era",
+    "verify:zksync-sepolia": "pnpm run verify --network zksync_sepolia",
     "benchmark:sepolia": "hardhat benchmark --network sepolia",
     "benchmark:mainnet": "hardhat benchmark --network mainnet",
     "benchmark:optimism-sepolia": "hardhat benchmark --network optimism_sepolia",
@@ -175,7 +199,11 @@
     "benchmark:gnosis": "pnpm run benchmark --network gnosis",
     "benchmark:gnosis-chiado": "pnpm run benchmark --network gnosis_chiado",
     "benchmark:polygon": "pnpm run benchmark --network polygon",
-    "benchmark:polygon-amoy": "pnpm run benchmark --network polygon_amoy"
+    "benchmark:polygon-amoy": "pnpm run benchmark --network polygon_amoy",
+    "benchmark:linea": "pnpm run benchmark --network linea",
+    "benchmark:linea-sepolia": "pnpm run benchmark --network linea_sepolia",
+    "benchmark:zksync-era": "pnpm run benchmark --network zksync_era",
+    "benchmark:zksync-sepolia": "pnpm run benchmark --network zksync_sepolia"
   },
   "dependencies": {
     "@excubiae/contracts": "^0.11.0",
