test: zkevm fork running support
- [x] Add zksync hardhat plugin
- [x] Increase timeouts for contract tests

--- a/packages/contracts/.env.example
+++ b/packages/contracts/.env.example
@@ -39,7 +39,7 @@ FORKING_URL=
 # Gas price to use for transactions
 GAS_PRICE=
 # Block number to fork from
-FORKING_BLOCK_NUM=
+FORKING_BLOCK_NUMBER=
 # Hardhat logging level (true/false)
 HARDHAT_LOGGING=
 # IPFS Gateway URL
@@ -50,3 +50,5 @@ BENCHMARK_MAX_BATCH_SIZE=
 COINMARKETCAP_API_KEY=
 # Gas price for gas reporter
 GAS_REPORTER_PRICE=
+# Optional: use zksync hardhat plugin or not (true | false)
+ZKSYNC=
